# python-typer-cli

./: README.md
todo_project/: README.md  pyproject.toml
todo_project/core/: __init__.py  __main__.py  cli.py
todo_project/tests/: test_todo.py
todo_project/todo/: __init__.py  __main__.py  cli.py  config.py  database.py  todo.py
